--- a/src/main/resources/transmapping.yml
+++ b/src/main/resources/transmapping.yml
@@ -66,7 +66,7 @@ mapping:
   PISTON_BASE: pistonBase
   WOOL:
     general: cloth
-    special: colors
+    template: colors
   YELLOW_FLOWER: flower1.dandelion
   RED_ROSE: 
     general: flower2
