--- a/src/main/resources/transmapping.yml
+++ b/src/main/resources/transmapping.yml
@@ -238,147 +238,136 @@ mapping:
   JUNGLE_DOOR: doorJungle
   ACACIA_DOOR: doorAcacia
   DARK_OAK_DOOR: doorDarkOak
-  IRON_SPADE:
-  IRON_PICKAXE:
-  IRON_AXE:
-  FLINT_AND_STEEL:
-  APPLE:
-  BOW:
-  ARROW:
-  COAL:
-  DIAMOND:
-  IRON_INGOT:
-  GOLD_INGOT:
-  IRON_SWORD:
-  WOOD_SWORD:
-  WOOD_SPADE:
-  WOOD_PICKAXE:
-  WOOD_AXE:
-  STONE_SWORD:
-  STONE_SPADE:
-  STONE_PICKAXE:
-  STONE_AXE:
-  DIAMOND_SWORD:
-  DIAMOND_SPADE:
-  DIAMOND_PICKAXE:
-  DIAMOND_AXE:
-  STICK:
-  BOWL:
-  MUSHROOM_SOUP:
-  GOLD_SWORD:
-  GOLD_SPADE:
-  GOLD_PICKAXE:
-  GOLD_AXE:
-  STRING:
-  FEATHER:
-  SULPHUR:
-  WOOD_HOE:
-  STONE_HOE:
-  IRON_HOE:
-  DIAMOND_HOE:
-  GOLD_HOE:
-  SEEDS:
-  WHEAT:
-  BREAD:
-  LEATHER_HELMET:
-  LEATHER_CHESTPLATE:
-  LEATHER_LEGGINGS:
-  LEATHER_BOOTS:
-  CHAINMAIL_HELMET:
-  CHAINMAIL_CHESTPLATE:
-  CHAINMAIL_LEGGINGS:
-  CHAINMAIL_BOOTS:
-  IRON_HELMET:
-  IRON_CHESTPLATE:
-  IRON_LEGGINGS:
-  IRON_BOOTS:
-  DIAMOND_HELMET:
-  DIAMOND_CHESTPLATE:
-  DIAMOND_LEGGINGS:
-  DIAMOND_BOOTS:
-  GOLD_HELMET:
-  GOLD_CHESTPLATE:
-  GOLD_LEGGINGS:
-  GOLD_BOOTS:
-  FLINT:
-  PORK:
-  GRILLED_PORK:
-  PAINTING:
-  GOLDEN_APPLE:
-  SIGN:
-  WOOD_DOOR:
-  BUCKET:
-  WATER_BUCKET:
-  LAVA_BUCKET:
-  MINECART:
-  SADDLE:
-  IRON_DOOR:
-  REDSTONE:
-  SNOW_BALL:
-  BOAT:
-  LEATHER:
-  MILK_BUCKET:
-  CLAY_BRICK:
-  CLAY_BALL:
-  SUGAR_CANE:
-  PAPER:
-  BOOK:
-  SLIME_BALL:
-  STORAGE_MINECART:
-  POWERED_MINECART:
-  EGG:
-  COMPASS:
-  FISHING_ROD:
-  WATCH:
-  GLOWSTONE_DUST:
+  IRON_SPADE: shovelIron
+  IRON_PICKAXE: pickaxeIron
+  IRON_AXE: hatchetIron
+  FLINT_AND_STEEL: flintAndSteel
+  IRON_INGOT: ingotIron
+  GOLD_INGOT: ingotGold
+  IRON_SWORD: swordIron
+  WOOD_SWORD: swordWood
+  WOOD_SPADE: shovelWood
+  WOOD_PICKAXE: pickaxeWood
+  WOOD_AXE: hatchetWood
+  STONE_SWORD: swordStone
+  STONE_SPADE: shovelStone
+  STONE_PICKAXE: pickaxeStone
+  STONE_AXE: hatchetStone
+  DIAMOND_SWORD: swordDiamond
+  DIAMOND_SPADE: shovelDiamond
+  DIAMOND_PICKAXE: pickaxeDiamond
+  DIAMOND_AXE: hatchetDiamond
+  MUSHROOM_SOUP: mushroomStew
+  GOLD_SWORD: swordGold
+  GOLD_SPADE: shovelGold
+  GOLD_PICKAXE: pickaxeGold
+  GOLD_AXE: hatchetGold
+  WOOD_HOE: hoeWood
+  STONE_HOE: hoeStone
+  IRON_HOE: hoeIron
+  DIAMOND_HOE: hoeDiamond
+  GOLD_HOE: hoeGold
+  LEATHER_HELMET: helmetCloth
+  LEATHER_CHESTPLATE: chestplateCloth
+  LEATHER_LEGGINGS: leggingsCloth
+  LEATHER_BOOTS: bootsCloth
+  CHAINMAIL_HELMET: helmetChain
+  CHAINMAIL_CHESTPLATE: chestplateChain
+  CHAINMAIL_LEGGINGS: leggingsChain
+  CHAINMAIL_BOOTS: bootsChain
+  IRON_HELMET: helmetIron
+  IRON_CHESTPLATE: chestplateIron
+  IRON_LEGGINGS: leggingsIron
+  IRON_BOOTS: bootsIron
+  DIAMOND_HELMET: helmetDiamond
+  DIAMOND_CHESTPLATE: chestplateDiamond
+  DIAMOND_LEGGINGS: leggingsDiamond
+  DIAMOND_BOOTS: bootsDiamond
+  GOLD_HELMET: helmetGold
+  GOLD_CHESTPLATE: chestplateGold
+  GOLD_LEGGINGS: leggingsGold
+  GOLD_BOOTS: bootsGold
+  PORK: porkchopRaw
+  GRILLED_PORK: porkchopCooked
+  GOLDEN_APPLE: appleGold
+  WOOD_DOOR: doorOak
+  WATER_BUCKET: bucketWater
+  LAVA_BUCKET: bucketLava
+  IRON_DOOR: doorIron
+  SNOW_BALL: snowball
+  MILK_BUCKET: milk
+  CLAY_BRICK: brick
+  CLAY_BALL: clay
+  SUGAR_CANE: reeds
+  SLIME_BALL: slimeball
+  STORAGE_MINECART: minecartChest
+  POWERED_MINECART: minecartFurnace
+  FISHING_ROD: fishingRod
+  WATCH: clock
+  GLOWSTONE_DUST: yellowDust
   RAW_FISH:
+    general: fish
+    types:
+      0: cod
+      1: salmon
+      2: clownfish
+      3: pufferfish
   COOKED_FISH:
+    types:
+      0: fish.cod.cooked
+      1: fish.salmon.cooked
   INK_SACK:
-  BONE:
-  SUGAR:
-  CAKE:
-  BED:
-  DIODE:
-  COOKIE:
-  MAP:
-  SHEARS:
-  MELON:
-  PUMPKIN_SEEDS:
-  MELON_SEEDS:
-  RAW_BEEF:
-  COOKED_BEEF:
-  RAW_CHICKEN:
-  COOKED_CHICKEN:
-  ROTTEN_FLESH:
-  ENDER_PEARL:
-  BLAZE_ROD:
-  GHAST_TEAR:
-  GOLD_NUGGET:
-  NETHER_STALK:
-  POTION:
-  GLASS_BOTTLE:
-  SPIDER_EYE:
-  FERMENTED_SPIDER_EYE:
-  BLAZE_POWDER:
-  MAGMA_CREAM:
-  BREWING_STAND_ITEM:
-  CAULDRON_ITEM:
-  EYE_OF_ENDER:
-  SPECKLED_MELON:
-  MONSTER_EGG:
-  EXP_BOTTLE:
-  FIREBALL:
-  BOOK_AND_QUILL:
-  WRITTEN_BOOK:
-  EMERALD:
-  ITEM_FRAME:
-  FLOWER_POT_ITEM:
-  CARROT_ITEM:
-  POTATO_ITEM:
-  BAKED_POTATO:
-  POISONOUS_POTATO:
-  EMPTY_MAP:
-  GOLDEN_CARROT:
+    general: dyePowder
+    types:
+      0: black
+      1: red
+      2: green
+      3: brown
+      4: blue
+      5: purple
+      6: cyan
+      7: silver
+      8: gray
+      9: pink
+      10: lime
+      11: yellow
+      12: lightBlue
+      13: magenta
+      14: orange
+      15: white
+  PUMPKIN_SEEDS: seeds_pumpkin
+  MELON_SEEDS: seeds_melon
+  RAW_BEEF: beefRaw
+  COOKED_BEEF: beefCooked
+  RAW_CHICKEN: chickenRaw
+  COOKED_CHICKEN: chickenCooked
+  ROTTEN_FLESH: rottenFlesh
+  ENDER_PEARL: enderPearl
+  BLAZE_ROD: blazeRod
+  GHAST_TEAR: ghastTear
+  GOLD_NUGGET: goldNugget
+  NETHER_STALK: netherStalkSeeds
+  GLASS_BOTTLE: emptyPotion
+  SPIDER_EYE: spiderEye
+  FERMENTED_SPIDER_EYE: fermentedSpiderEye
+  BLAZE_POWDER: blazePowder
+  MAGMA_CREAM: magmaCream
+  BREWING_STAND_ITEM: brewingStand
+  CAULDRON_ITEM: cauldron
+  EYE_OF_ENDER: eyeOfEnder
+  SPECKLED_MELON: speckledMelon
+  MONSTER_EGG: monsterPlacer
+  EXP_BOTTLE: expBottle
+  BOOK_AND_QUILL: writingBook
+  WRITTEN_BOOK: writtenBook
+  ITEM_FRAME: frame
+  FLOWER_POT_ITEM: flowerPot
+  CARROT_ITEM: carrots
+  POTATO_ITEM: potato
+  BAKED_POTATO: potatoBaked
+  POISONOUS_POTATO: potatoPoisonous
+  EMPTY_MAP: emptyMap
+  GOLDEN_CARROT: carrotGolden
   SKULL_ITEM:
     general: skull
     types:
@@ -387,48 +376,46 @@ mapping:
       2: zombie
       3: char
       4: creeper
-  CARROT_STICK:
-  NETHER_STAR:
-  PUMPKIN_PIE:
-  FIREWORK:
-  FIREWORK_CHARGE:
-  ENCHANTED_BOOK:
-  REDSTONE_COMPARATOR:
-  NETHER_BRICK_ITEM:
-  QUARTZ:
-  EXPLOSIVE_MINECART:
-  HOPPER_MINECART:
-  PRISMARINE_SHARD:
-  PRISMARINE_CRYSTALS:
-  RABBIT:
-  COOKED_RABBIT:
-  RABBIT_STEW:
-  RABBIT_FOOT:
-  RABBIT_HIDE:
-  ARMOR_STAND:
-  IRON_BARDING:
-  GOLD_BARDING:
-  DIAMOND_BARDING:
-  LEASH:
-  NAME_TAG:
-  COMMAND_MINECART:
-  MUTTON:
-  COOKED_MUTTON:
-  BANNER:
-  SPRUCE_DOOR_ITEM:
-  BIRCH_DOOR_ITEM:
-  JUNGLE_DOOR_ITEM:
-  ACACIA_DOOR_ITEM:
-  DARK_OAK_DOOR_ITEM:
-  GOLD_RECORD:
-  GREEN_RECORD:
-  RECORD_3:
-  RECORD_4:
-  RECORD_5:
-  RECORD_6:
-  RECORD_7:
-  RECORD_8:
-  RECORD_9:
-  RECORD_10:
-  RECORD_11:
-  RECORD_12:
+  CARROT_STICK: carrotOnAStick
+  NETHER_STAR: netherStar
+  PUMPKIN_PIE: pumpkinPie
+  FIREWORK: fireworks
+  FIREWORK_CHARGE: fireworksCharge
+  ENCHANTED_BOOK: enchantedBook
+  REDSTONE_COMPARATOR: comparator
+  NETHER_BRICK_ITEM: netherbrick
+  QUARTZ: netherquartz
+  EXPLOSIVE_MINECART: minecartTnt
+  HOPPER_MINECART: minecartHopper
+  PRISMARINE_SHARD: prismarineShard
+  PRISMARINE_CRYSTALS: prismarineCrystals
+  RABBIT: rabbitRaw
+  COOKED_RABBIT: rabbitCooked
+  RABBIT_STEW: rabbitStew
+  RABBIT_FOOT: rabbitFoot
+  RABBIT_HIDE: rabbitHide
+  ARMOR_STAND: armorStand
+  IRON_BARDING: horsearmormetal
+  GOLD_BARDING: horsearmorgold
+  DIAMOND_BARDING: horsearmordiamond
+  NAME_TAG: nameTag
+  COMMAND_MINECART: minecartCommandBlock
+  MUTTON: muttonRaw
+  COOKED_MUTTON: muttonCooked
+  SPRUCE_DOOR_ITEM: doorSpruce
+  BIRCH_DOOR_ITEM: doorBirch
+  JUNGLE_DOOR_ITEM: doorJungle
+  ACACIA_DOOR_ITEM: doorAcacia
+  DARK_OAK_DOOR_ITEM: doorDarkOak
+  GOLD_RECORD: record.13
+  GREEN_RECORD: record.cat
+  RECORD_3: record.blocks
+  RECORD_4: record.chirp
+  RECORD_5: record.far
+  RECORD_6: record.mall
+  RECORD_7: record.mellohi
+  RECORD_8: record.stal
+  RECORD_9: record.strad
+  RECORD_10: record.ward
+  RECORD_11: record.11
+  RECORD_12: record.wait
