--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -8,14 +8,14 @@ defaultradius: 16
 cooldown: 10
 lang:
   radius:
-    self: 'You hold up the item %item%!'
-    custom: '&8(View distance: %radius%&8 blocks)'
-    target: '%player% holds up the item %item%!'
+    self: "You hold up the item %item%!"
+    custom: "&8(View distance: %radius%&8 blocks)"
+    target: "%player% holds up the item %item%!"
   player:
-    self: 'You show %player% the item %item%'
-    target: '%player% shows you the item %item%'
+    self: "You show %player% the item %item%"
+    target: "%player% shows you the item %item%"
   error:
-    noitem: '&cYou don't have an item to show in your hand. :('
-    playeroffline: '&cThe player %player%&c is not online'
-    noonearound: '&cThere are no players around which could see your item :('
-    coolden: '&cYou have to wait %remaining%&c more seconds before showing another item!'
+    noitem: "&cYou don't have an item to show in your hand. :("
+    playeroffline: "&cThe player %player%&c is not online"
+    noonearound: "&cThere are no players around which could see your item :("
+    coolden: "&cYou have to wait %remaining%&c more seconds before showing another item!"
